# helvum

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  meson.build  meson_options.txt  org.freedesktop.ryuukyu.Helvum.json
.github/: flatpak.yml
build-aux/: cargo.sh  dist-vendor.sh  meson_post_install.py  org.freedesktop.ryuukyu.Helvum.json
data/: meson.build  org.freedesktop.ryuukyu.Helvum.desktop  org.freedesktop.ryuukyu.Helvum.desktop.in  org.freedesktop.ryuukyu.Helvum.metainfo.xml.in
data/icons/: meson.build
docs/: architecture.md  making_a_release.md
src/: application.rs  controller.rs  main.rs  meson.build  pipewire_connection.rs  pipewire_state.rs  style.css
src/pipewire_connection/: state.rs
src/view/: graph_view.rs  mod.rs  node.rs  pipewire_node.rs  port.rs
