[package]
name = "helvum"
version = "0.2.0"
authors = ["Tom A. Wagner <tom.a.wagner@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "A GTK patchbay for pipewire"
repository = "https://gitlab.freedesktop.org/ryuukyu/helvum"
readme = "README.md"
keywords = ["pipewire", "gtk", "patchbay", "gui", "utility"]
categories = ["gui", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk4-rs/", package = "gtk4" }
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs", branch = "main" }

log = "0.4.11"
env_logger = "0.8.2"

once_cell = "1.7.2"
