[package]
name = "helvum"
version = "0.3.0"
authors = ["Tom A. Wagner <tom.a.wagner@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "A GTK patchbay for pipewire"
repository = "https://gitlab.freedesktop.org/ryuukyu/helvum"
readme = "README.md"
keywords = ["pipewire", "gtk", "patchbay", "gui", "utility"]
categories = ["gui", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = "0.4"
gtk = { version = "0.2", package = "gtk4" }

log = "0.4.11"
env_logger = "0.9.0"

once_cell = "1.7.2"
