[package]
name = "helvum"
version = "0.3.2"
authors = ["Tom A. Wagner <tom.a.wagner@protonmail.com>"]
edition = "2021"
rust-version = "1.56"
license = "GPL-3.0-only"
description = "A GTK patchbay for PipeWire"
repository = "https://gitlab.freedesktop.org/ryuukyu/helvum"
readme = "README.md"
keywords = ["pipewire", "gtk", "patchbay", "gui", "utility"]
categories = ["gui", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = "0.4"
gtk = { version = "0.3", package = "gtk4" }
glib = { version = "0.14", features = ["log"] }

log = "0.4.11"

once_cell = "1.7.2"
